--- a/rebar.config
+++ b/rebar.config
@@ -4,9 +4,7 @@
             {platform_define, "^(2[3-9]|3[0-9])", 'USE_CRYPTO_MAC'}]}.
 
 {deps, [
-    {jsx, "2.8.0"},
-%    {hackney, {git, "https://github.com/benoitc/hackney"}}
-    {hackney, "1.20.1"}
+    {jsx, "2.8.0"}
 ]}.
 
 {profiles, [{docs, [{deps, [{edown,"0.9.1"}]},
