--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,8 @@
             {platform_define, "^(2[3-9]|3[0-9])", 'USE_CRYPTO_MAC'}]}.
 
 {deps, [
-    {jsx, "2.8.0"}
+    {jsx, "2.8.0"},
+    {hackney, "1.20.1"}
 ]}.
 
 {profiles, [{docs, [{deps, [{edown,"0.9.1"}]},
